--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-fastapi
-databases
-sqlalchemy
-pydantic
+fastapi~=0.115.6
+databases~=0.9.0
+sqlalchemy~=2.0.36
+pydantic~=2.10.4
 uvicorn
+atproto~=0.0.56
+celery~=5.4.0
+redis
+pydantic-settings~=2.7.0
+python-dotenv~=1.0.1
+alembic~=1.14.0
