--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 fastapi~=0.115.6
+fastapi[standard]~=0.115.6
 databases~=0.9.0
 sqlalchemy~=2.0.36
 pydantic~=2.10.4
@@ -6,6 +7,7 @@ uvicorn
 atproto~=0.0.56
 celery~=5.4.0
 redis
+aiosqlite~=0.20.0
 pydantic-settings~=2.7.0
 python-dotenv~=1.0.1
 alembic~=1.14.0
